protonvpn-gui (0.6.2-1) unstable; urgency=medium

  * Add warning message if kill switch is blocking all connections

 -- Proton Technologies AG <opensource@proton.me>  Thu, 06 May 2021 17:00:00 +0100

protonvpn-gui (0.6.1-2) unstable; urgency=medium

  * Fix connect button glitch
  * Add info icon hover effect
  * Add timetout to when fetching IP
  * Improve dashboard UI after disconnecting
  * Fix quick connect/disconnect glitch

 -- Proton Technologies AG <opensource@proton.me>  Wed, 05 May 2021 15:00:00 +0100

protonvpn-gui (0.6.0-1) unstable; urgency=medium

  * Fix quick connect loop
  * Add possibility to login upon pressing Enter after filling in credentials on login window
  * Make possibile to add extra content to dialog via a method
  * Modify connecting overlay message display
  * Display an appropriate error on failed login
  * Other color and styling changes 

 -- Proton Technologies AG <opensource@proton.me>  Tue, 04 May 2021 11:30:00 +0100

 protonvpn-gui (0.5.0-1) unstable; urgency=medium

  * Add new server list headers
  * Feature: Add streaming information for servers that provide streaming services
  * Update server list styling

 -- Proton Technologies AG <opensource@proton.me>  Wed, 21 Apr 2021 11:30:00 +0100
 
 protonvpn-gui (0.4.0-2) unstable; urgency=medium

  * Add about dialog; display current version
  * Add .desktop file

 -- Proton Technologies AG <opensource@proton.me>  Wed, 21 Apr 2021 11:30:00 +0100

 protonvpn-gui (0.3.0-1) unstable; urgency=medium

  * Adjust and displays server load colour
  * Implement server multi-features aka feature bitmap
  * Disable permanent Kill Switch from login window if it is enabled

 -- Proton Technologies AG <opensource@proton.me>  Fri, 16 Apr 2021 16:30:00 +0100
 
 protonvpn-gui (0.2.0-1) unstable; urgency=medium

  * Implement logout and quit
  * Feature: filter countries

 -- Proton Technologies AG <opensource@proton.me>  Wed, 14 Apr 2021 11:20:00 +0100
 